<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_header"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_below_header"
                android:layout_margin="@dimen/margin_m"
                android:background="@drawable/et_bkg"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/padding_mini"
                android:contentDescription="@string/enter_email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_below_header"
                android:layout_margin="@dimen/margin_m"
                android:background="@drawable/et_bkg"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_mini" />

        </android.support.design.widget.TextInputLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/email_register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_max"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_textComplete="@string/sucess"
            app:cpb_textError="@string/failed"
            app:cpb_textIdle="@string/register_text_button" />


        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_max"
            android:gravity="center_horizontal"
            android:text="@string/already_registered"
            android:textColor="@android:color/white" />


    </LinearLayout>


</RelativeLayout>
