<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/recipe_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/recipe_card_margin"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/recipe_card_radius"
    android:focusable="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/recipe_card_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_card_layout">

        <ImageView
            android:id="@+id/recipe_list_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:id="@+id/gradient_image"
            android:src="@drawable/gradient" />

        <TextView
            android:id="@+id/slide_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/secondary_item_textView"
            android:layout_marginBottom="@dimen/tv_margin"
            android:layout_marginLeft="@dimen/margin_inner"
            android:layout_marginStart="@dimen/layout_margin_inner"
            android:maxLines="1"
            android:text="@string/recipe_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_vew_recipe"

            />

        <TextView
            android:id="@+id/secondary_item_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_bottom_inner"
            android:layout_marginLeft="@dimen/margin_inner"
            android:layout_marginStart="@dimen/layout_margin_inner"
            android:text="@string/recipe_property"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recipe_property_size"

            />

    </RelativeLayout>


</android.support.v7.widget.CardView>