<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_ingredientLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/add_ingredient_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/single_margin">

        <RelativeLayout
            android:id="@+id/add_ingredient_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:id="@+id/quantityTextOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/ingredient_measure_text"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/unitTextOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_small"
                android:layout_toEndOf="@+id/quantityTextOut"
                android:layout_toRightOf="@+id/quantityTextOut"
                android:text="@string/ingredient"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/ingredientTextOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_small"
                android:layout_toEndOf="@+id/unitTextOut"
                android:layout_toRightOf="@+id/unitTextOut"
                android:text="@string/unit"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/remove_ingredient"
                android:layout_width="@dimen/add_button_dimen"
                android:layout_height="@dimen/add_button_dimen"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/normal_margin"
                android:background="@drawable/ic_remove_circle_red_600_18dp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>


